--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@
 node_modules/
 platforms/
 plugins/
-idea/
+**/.idea/workspace.xml
+**/.idea/tasks.xml
+.git-old/branches/
+.git-old/objects/
+.git-old/refs/
